adding tips api

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    def retrofit_version = "2.9.0"
+    def lifecycle_version = "2.2.0"
+
     //Constraint Layout
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
@@ -73,5 +76,12 @@ dependencies {
 
     //Lottie Animation
     implementation 'com.airbnb.android:lottie:3.5.0'
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    //Lifecycle(LiveData and ViewModel)
+    implementation  "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
 }
