--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".Activity.SplashActivity">
+        <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,13 +26,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Authentication.VerifyPhoneActivity"
+            android:name=".authentication.VerifyPhoneActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Authentication.PhoneOTPActivity"
+            android:name=".authentication.PhoneOTPActivity"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".Activity.MainActivity"
+            android:name=".activity.MainActivity"
             android:screenOrientation="portrait" />
     </application>
 
