--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     //Firebase Database
     implementation 'com.google.firebase:firebase-database:19.6.0'
 
+    //Firebase Storage
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
+
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
