--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,6 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -70,14 +69,20 @@ dependencies {
     //Firebase Storage
     implementation 'com.google.firebase:firebase-storage:19.2.1'
 
+    //Firebase Messaging
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //Image Cropper
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
     //Chip Navigation
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.4'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.10'
 
-    //Lottie Animation
+    //Lottie
     implementation 'com.airbnb.android:lottie:3.5.0'
 
     //Retrofit
@@ -86,5 +91,8 @@ dependencies {
 
     //Lifecycle(LiveData and ViewModel)
     implementation  "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+
+    //Jitsi Meet
+    implementation ('org.jitsi.react:jitsi-meet-sdk:2.10.0') { transitive = true }
 
 }
