few changes and adding arduino code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,6 @@ dependencies {
     implementation  "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
     //Jitsi Meet
-    implementation ('org.jitsi.react:jitsi-meet-sdk:2.10.0') { transitive = true }
+    implementation ('org.jitsi.react:jitsi-meet-sdk:') { transitive = true }
 
 }
