--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     //Material Design
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
 
     //Google Maps
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     //Swipe Refresh Layout
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
@@ -62,11 +62,11 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     //Firebase Auth
-    implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'com.google.firebase:firebase-auth:20.0.3'
     implementation 'androidx.browser:browser:1.3.0'
 
     //Firebase Database
-    implementation 'com.google.firebase:firebase-database:19.6.0'
+    implementation 'com.google.firebase:firebase-database:19.7.0'
 
     //Firebase Storage
     implementation 'com.google.firebase:firebase-storage:19.2.1'
@@ -75,7 +75,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
 
     //Firebase Crashlytics
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
+    implementation 'com.google.firebase:firebase-crashlytics:17.4.0'
 
     //Firebase Analytics
     implementation 'com.google.firebase:firebase-analytics:18.0.2'
@@ -83,12 +83,17 @@ dependencies {
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //Liquid Swipe
+    implementation 'com.cuberto:liquid-swipe:1.0.0'
+
     //Image Cropper
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
     //Chip Navigation
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.4'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.10'
+    implementation 'androidx.core:core:1.3.2'
+    implementation 'androidx.core:core-ktx:1.3.2'
 
     //Lottie
     implementation 'com.airbnb.android:lottie:3.5.0'
