--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,47 +8,47 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-
         android:allowBackup="true"
-        android:icon="@drawable/mobidoc_logo"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.PatientMonitoringSystem">
-        <activity android:name=".authentication.doctor.EmailLoginActivity"/>
+        android:theme="@style/Theme.PatientMonitoringSystem"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".activity.IntroActivity"></activity>
+        <activity android:name=".authentication.doctor.EmailLoginActivity" />
         <activity android:name=".authentication.doctor.EmailRegisterActivity" />
         <activity android:name=".activity.doctor.EditProfileActivityDoctor" />
         <activity android:name=".activity.doctor.MainActivityDoctor" />
         <activity android:name=".activity.patient.EditProfileActivity" />
-        <activity android:name=".calls.OutgoingInvitationActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".calls.IncomingInvitationActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".calls.OutgoingInvitationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".calls.IncomingInvitationActivity"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".activity.SplashActivity">
+        <activity
+            android:name=".activity.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".authentication.patient.VerifyPhoneActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".authentication.patient.PhoneOTPActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activity.patient.MainActivityPatient"
             android:screenOrientation="portrait" />
-
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
@@ -57,11 +57,9 @@
             android:name=".firebase.MessagingService"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
-
     </application>
 
 </manifest>
