--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,61 +9,39 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo1"
+        android:icon="@drawable/app_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:largeHeap="true"
         android:theme="@style/Theme.PatientMonitoringSystem"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.feed.CommentsActivity"></activity>
-        <activity android:name=".activity.feed.PostActivity" />
-        <activity android:name=".activity.chat.ChatActivity" />
-        <activity android:name=".activity.IntroActivity" />
         <activity android:name=".authentication.doctor.EmailLoginActivity" />
         <activity android:name=".authentication.doctor.EmailRegisterActivity" />
         <activity android:name=".activity.doctor.EditProfileActivityDoctor" />
         <activity android:name=".activity.doctor.MainActivityDoctor" />
         <activity android:name=".activity.patient.EditProfileActivity" />
         <activity
-            android:name=".calls.OutgoingInvitationActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".calls.IncomingInvitationActivity"
-            android:screenOrientation="portrait" />
-
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
-
-        <activity
             android:name=".activity.SplashActivity"
-            android:screenOrientation="portrait">
+            android:exported="true"
+            android:screenOrientation="fullSensor">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".authentication.patient.VerifyPhoneActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".authentication.patient.PhoneOTPActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".activity.patient.MainActivityPatient"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="fullSensor" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-
-        <service
-            android:name=".firebase.MessagingService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
     </application>
 
 </manifest>
