--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.robo101.patientmonitoringsystem">
+    package="com.carditectgroup.carditect">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -9,21 +9,20 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/app_logo"
+        android:icon="@color/colorBlack"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:largeHeap="true"
         android:theme="@style/Theme.PatientMonitoringSystem"
         android:usesCleartextTraffic="true">
-        <activity android:name=".authentication.doctor.EmailLoginActivity" />
-        <activity android:name=".authentication.doctor.EmailRegisterActivity" />
-        <activity android:name=".activity.doctor.EditProfileActivityDoctor" />
-        <activity android:name=".activity.doctor.MainActivityDoctor" />
-        <activity android:name=".activity.patient.EditProfileActivity" />
+        <activity android:name="com.carditectgroup.carditect.authentication.doctor.EmailLoginActivity" />
+        <activity android:name="com.carditectgroup.carditect.authentication.doctor.EmailRegisterActivity" />
+        <activity android:name="com.carditectgroup.carditect.activity.doctor.EditProfileActivityDoctor" />
+        <activity android:name="com.carditectgroup.carditect.activity.doctor.MainActivityDoctor" />
+        <activity android:name="com.carditectgroup.carditect.activity.patient.EditProfileActivity" />
         <activity
-            android:name=".activity.SplashActivity"
-            android:exported="true"
-            android:screenOrientation="fullSensor">
+            android:name="com.carditectgroup.carditect.activity.SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -31,14 +30,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".authentication.patient.VerifyPhoneActivity"
-            android:screenOrientation="fullSensor" />
+            android:name="com.carditectgroup.carditect.authentication.patient.VerifyPhoneActivity" />
         <activity
-            android:name=".authentication.patient.PhoneOTPActivity"
-            android:screenOrientation="fullSensor" />
+            android:name="com.carditectgroup.carditect.authentication.patient.PhoneOTPActivity" />
         <activity
-            android:name=".activity.patient.MainActivityPatient"
-            android:screenOrientation="fullSensor" />
+            android:name="com.carditectgroup.carditect.activity.patient.MainActivityPatient" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
